--- a/Quick/Quick.vcxproj.filters
+++ b/Quick/Quick.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="at.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lexer.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="at.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
